@@ -8,8 +8,6 @@
 - icons for services
 
 - do not change bt while paired -> setting
-
-- make logging less noisy
   
 - set brightness
 - set a black wall paper (and honour live wallpapers)
