@@ -8,5 +8,5 @@
 # project structure.
 
 # Project target.
-target=android-8
+target=android-10
 android.library.reference.1=../backupDB2XML
