@@ -3,8 +3,11 @@ package ch.amana.android.cputuner.application;
 import android.app.Application;
 import android.content.Context;
 import android.content.Intent;
+import android.os.StrictMode;
+import android.os.StrictMode.ThreadPolicy.Builder;
 import ch.amana.android.cputuner.helper.GuiUtils;
 import ch.amana.android.cputuner.helper.InstallHelper;
+import ch.amana.android.cputuner.helper.Logger;
 import ch.amana.android.cputuner.helper.SettingsStorage;
 import ch.amana.android.cputuner.model.PowerProfiles;
 import ch.amana.android.cputuner.service.BatteryService;
@@ -20,7 +23,15 @@ public class CpuTunerApplication extends Application {
 		if (!"".equals(lang)) {
 			GuiUtils.setLanguage(ctx, lang);
 		}
-		// StrictMode.enableDefaults();
+		if (Logger.DEBUG) {
+			Builder threadPolicy = new StrictMode.ThreadPolicy.Builder();
+			// threadPolicy.detectDiskReads();
+			threadPolicy.detectDiskWrites();
+			threadPolicy.detectNetwork();
+			// threadPolicy.penaltyLog();
+			threadPolicy.penaltyDropBox();
+			StrictMode.setThreadPolicy(threadPolicy.build());
+		}
 
 		InstallHelper.populateDb(ctx);
 		if (SettingsStorage.getInstance().isEnableProfiles()) {
